force-app/main/default/objects/Assessment__c/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <inlineHelpText>What time is this assessment due?</inlineHelpText>
    <label>Time</label>
    <required>true</required>
    <type>Time</type>
</CustomField>