force-app/main/default/objects/Assessment__c/recordTypes/HW.recordType-meta.xml
<RecordType>
    <fullName>HW</fullName>
    <active>true</active>
    <label>HW</label>
</RecordType>