force-app/main/default/objects/Assessment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Class__c</columns>
    <columns>Date__c</columns>
    <columns>Graded__c</columns>
    <columns>Room__c</columns>
    <columns>Time__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>